# mantle

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release-dispatch.yml
cuttlefish-cli/: Cargo.toml
cuttlefish-cli/src/: cmd_doctor.rs  cmd_hook.rs  cmd_hydrate.rs  cmd_init.rs  cmd_open.rs  cmd_worktree.rs  config.rs  hooks_config.rs  main.rs  managed_section.rs  permissions.rs  socket.rs  util.rs
cuttlefish-cli/tests/: integration.rs
mantle/: Cargo.toml
mantle-git/: Cargo.toml
mantle-git/src/: error.rs  hydrate.rs  lib.rs  repo.rs  types.rs
mantle-git/src/ops/: artifacts.rs  blame.rs  blob.rs  branch.rs  config.rs  cow.rs  diff.rs  log.rs  merge.rs  mod.rs  reflog.rs  refs.rs  remote.rs  rewrite.rs  status.rs  tag.rs  worktree.rs  write.rs
mantle-git/tests/: branch_tests.rs  cow_integration_tests.rs  integration_tests.rs  merge_exec_tests.rs  remote_tests.rs  rewrite_tests.rs  write_tests.rs
mantle/src/: artifacts.rs  cow.rs  error.rs  hydrate.rs  lib.rs  repo.rs  worktree.rs
