[workspace]
members = ["mantle", "cuttlefish-cli"]
resolver = "2"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
module_name_repetitions = { level = "allow" }
must_use_candidate = { level = "allow" }
needless_pass_by_value = { level = "allow" }

[workspace.lints.rust]
unsafe_code = "deny"
