[package]
name = "cuttlefish-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for CoW-accelerated git worktree hydration"
license = "MIT"

[[bin]]
name = "cuttlefish"
path = "src/main.rs"

[dependencies]
mantle = { path = "../mantle" }
mantle-git = { path = "../mantle-git" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

[lints]
workspace = true
