[package]
name = "cuttlefish-cli"
version = "0.1.2"
edition = "2021"
description = "CLI for CoW-accelerated git worktree hydration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pieter-ouwerkerk/mantle"

[[bin]]
name = "cuttlefish"
path = "src/main.rs"

[features]
default = []
cuttlefish-app = []

[dependencies]
lamella = { version = "0.1", path = "../mantle" }
mantle-git = { version = "0.1", path = "../mantle-git" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

[lints]
workspace = true
