[package]
name = "mantle-git"
version = "0.1.0"
edition = "2021"
description = "CoW-accelerated git worktree hydration"
license = "MIT"

[features]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
thiserror = "2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gix = { version = "0.79", default-features = false, features = [
    "max-performance-safe",
    "revision",
    "status",
    "dirwalk",
    "worktree-mutation",
    "blob-diff",
    "blame",
] }
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
    "ssh",
    "vendored-openssl",
] }
gix-ignore = "0.19"
bstr = "1.12"
imara-diff = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
parking_lot = "0.12"
uniffi = { version = "0.29", features = ["cli"], optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[lib]
name = "mantle_git"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi"]
