[package]
name = "lamella"
version = "0.1.2"
edition = "2021"
description = "Orchestration layer for CoW-accelerated git worktree hydration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pieter-ouwerkerk/mantle"

[dependencies]
mantle-git = { version = "0.1", path = "../mantle-git" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
